--- a/index.html
+++ b/index.html
@@ -34,12 +34,13 @@
             border-radius: 15px; /* Rounded corners for clean border */
             border: 5px solid #ffffff; /* White border around the image */
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Shadow effect */
+            margin-bottom: 20px; /* Space between image and text box */
         }
 
         .button {
             display: inline-block;
             padding: 10px 20px;
-            margin-top: 20px;
+            margin-top: 10px;
             background-color: #007BFF;
             color: white;
             border: none;
@@ -51,6 +52,12 @@
 
         .button:hover {
             background-color: #0056b3;
+        }
+
+        .textbox {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -64,6 +71,9 @@
     <!-- Buttons with clickable links -->
     <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
     <a href="https://www.pump.fun/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Pump</a>
+
+    <!-- Text box with title -->
+    <div class="textbox">CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA</div>
 
 </body>
 </html>
