--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
     <!-- Using the provided image path -->
     <img src="Screenshot 2024-03-29 012520.png" alt="Cat with Egg">
 
-    <p>This is a photo of a cat with an egg. Isn't it cute?</p>
+    <p>This is a photo of a cat with an egg. Isn't it cute? 
+
+        CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA
+
+</p>
 
     <!-- Buttons with clickable links -->
     <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
