--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Colorful Website</title>
+    <title>CatWifEgg</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -26,6 +26,12 @@
             50% { background-color: #cc00ff; } /* Color change at 50% of animation duration */
             75% { background-color: #ff00cc; } /* Color change at 75% of animation duration */
             100% { background-color: #ffcc00; } /* Back to initial color */
+        }
+
+        h1 {
+            font-family: 'Comic Sans MS', cursive; /* Using cursive font */
+            font-size: 36px;
+            margin-bottom: 20px;
         }
 
         img {
@@ -63,14 +69,13 @@
 </head>
 <body>
 
+    <!-- Cursive title -->
+    <h1>CatWifEgg</h1>
+
     <!-- Using the provided image path -->
     <img src="Screenshot 2024-03-29 012520.png" alt="Cat with Egg">
 
-    <p>This is a photo of a cat with an egg. Isn't it cute? 
-
-        CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA
-
-</p>
+    <p>This is a photo of a cat with an egg. Isn't it cute?</p>
 
     <!-- Buttons with clickable links -->
     <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
