--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
     <a href="https://www.pump.fun/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Pump</a>
     <a href="https://t.co/m7BH7gJLvj" target="_blank" class="button">Telegram</a>
+    <a href="https://solscan.io/token/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Solscan</a>
 
     <!-- Text box with title -->
     <div class="textbox">CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA</div>
