--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CatWifEgg</title>
+    <script src="https://threejs.org/build/three.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,8 +17,6 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('data:image/png;base64,iVBORw0KGg...');
-            background-repeat: repeat;
             overflow: hidden;
         }
         
@@ -29,39 +28,11 @@
             100% { background-color: #ffcc00; }
         }
 
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .wheel {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            animation: rotateWheel 20s linear infinite;
-        }
-
-        @keyframes rotateWheel {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-
-        h1 {
-            font-family: 'Comic Sans MS', cursive;
-            font-size: 36px;
-            margin-bottom: 20px;
-        }
-
-        img {
-            width: 90%; 
-            max-width: 400px; 
+        canvas {
+            width: 90%;
+            max-width: 400px;
             height: auto;
             border-radius: 15px;
-            border: 5px solid #ffffff;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
             margin-bottom: 20px;
         }
 
@@ -94,44 +65,9 @@
                 font-size: 24px;
             }
 
-            img {
+            canvas {
                 max-width: 300px;
             }
-        }
-
-        /* Modal styles */
-        .modal {
-            display: none; 
-            position: fixed; 
-            z-index: 1; 
-            left: 0;
-            top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: auto; 
-            background-color: rgba(0,0,0,0.4);
-        }
-
-        .modal-content {
-            background-color: #fefefe;
-            margin: 15% auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .close:hover, .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -140,30 +76,17 @@
     <!-- Cursive title -->
     <h1>CatWifEgg</h1>
 
-    <!-- Using the provided image path -->
-    <div class="container">
-        <div class="wheel">
-            <img src="Screenshot 2024-03-29 012520.png" alt="Cat with Egg">
-            <p>This is a photo of a cat with an egg. Isn't it cute?</p>
-        </div>
-    </div>
+    <!-- Three.js canvas -->
+    <canvas id="threeCanvas"></canvas>
 
     <!-- Buttons with clickable links -->
-    <div class="container">
-        <div class="wheel">
-            <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
-            <a href="javascript:void(0);" onclick="openModal()" class="button">Pump</a>
-            <a href="https://t.co/m7BH7gJLvj" target="_blank" class="button">Telegram</a>
-            <a href="https://solscan.io/token/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Solscan</a>
-        </div>
-    </div>
+    <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
+    <a href="javascript:void(0);" onclick="openModal()" class="button">Pump</a>
+    <a href="https://t.co/m7BH7gJLvj" target="_blank" class="button">Telegram</a>
+    <a href="https://solscan.io/token/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Solscan</a>
 
     <!-- Text box with title -->
-    <div class="container">
-        <div class="wheel">
-            <div class="textbox">CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA</div>
-        </div>
-    </div>
+    <div class="textbox">CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA</div>
 
     <!-- Modal for Pump button content -->
     <div id="myModal" class="modal">
@@ -174,6 +97,36 @@
     </div>
 
     <script>
+        let scene, camera, renderer;
+        let catModel;
+
+        // Initialize Three.js scene
+        function init() {
+            scene = new THREE.Scene();
+            camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+            renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('threeCanvas') });
+            renderer.setSize(window.innerWidth * 0.9, window.innerHeight * 0.5);
+
+            // Load the cat model
+            const loader = new THREE.GLTFLoader();
+            loader.load('path_to_cat_model.gltf', function (gltf) {
+                catModel = gltf.scene;
+                catModel.scale.set(0.1, 0.1, 0.1);
+                catModel.position.set(0, -2, -10);
+                scene.add(catModel);
+            });
+
+            camera.position.z = 5;
+
+            animate();
+        }
+
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            renderer.render(scene, camera);
+        }
+
         // Open the modal
         function openModal() {
             document.getElementById("myModal").style.display = "block";
@@ -191,11 +144,10 @@
                 modal.style.display = "none";
             }
         }
+
+        // Initialize the Three.js scene
+        init();
     </script>
-
-</body>
-</html>
-
 
 </body>
 </html>
