--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
     <!-- Using the provided image path -->
     <img src="Screenshot 2024-03-29 012520.png" alt="Cat with Egg">
 
-    <p>This is a photo of a cat with an egg. Isn't it cute?</p>
+    <p>This is a photo of a cat with an egg. Isn't it cute?
+        Did u think the dev jeeted? </p>
 
     <!-- Buttons with clickable links -->
     <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
     <a href="https://www.pump.fun/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Pump</a>
-    <a href="https://t.co/m7BH7gJLvj" target="_blank" class="button">Telegram</a>
     <a href="https://solscan.io/token/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Solscan</a>
 
     <!-- Text box with title -->
