--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CatWifEgg</title>
+    <title>CatWifEgg Idle Game</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -16,10 +16,8 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('data:image/png;base64,iVBORw0KGg...');
-            background-repeat: repeat;
         }
-        
+
         @keyframes changeColor {
             0% { background-color: #ffcc00; }
             25% { background-color: #00ffcc; }
@@ -74,37 +72,20 @@
             border: 5px solid #ffffff;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
         }
-
-        /* Responsive design for mobile devices */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 24px;
-            }
-
-            img {
-                max-width: 300px;
-            }
-        }
     </style>
 </head>
 <body>
 
     <!-- Cursive title -->
-    <h1>CatWifEgg</h1>
+    <h1>CatWifEgg Idle Game</h1>
 
     <!-- Using the provided image path -->
     <img src="Screenshot 2024-03-29 012520.png" alt="Cat with Egg">
 
-    <p>This is a photo of a cat with an egg. Isn't it cute?
-        Did u think the dev jeeted? </p>
+    <p>Click the egg and cat to collect points!</p>
 
-    <!-- Buttons with clickable links -->
-    <a href="https://twitter.com/CatWifEgg" target="_blank" class="button">X</a>
-    <a href="https://www.pump.fun/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Pump</a>
-    <a href="https://solscan.io/token/6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA" target="_blank" class="button">Solscan</a>
-
-    <!-- Text box with title -->
-    <div class="textbox">CA: 6ZfzXrCCufcjwAwhqS46KYpzXuApSJhFECeRFjKhDFQA</div>
+    <!-- Points display -->
+    <div class="textbox">Points: <span id="points">0</span></div>
 
     <!-- Three.js game script -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -166,6 +147,10 @@
 
         animate();
     </script>
+
+</body>
+</html>
+
 
 </body>
 </html>
